<resources>
    <string name="app_name">HOSTEL COMPLAINT FORUM</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="new_complaint">New Complaint</string>
    <string name="anonymous">Anonymous</string>
    <string name="faculty_login">Faculty Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_continue">Forgot Password?</string>
    <string name="or">or</string>
    <string name="new_here">New here?</string>
    <string name="register">Register</string>
    <string name="faculty_register">Faculty Register</string>
    <string name="login">Login</string>
    <string name="student">STUDENT</string>
    <string name="faculty">FACULTY</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="hostel_j">Hostel-J</string>
    <string name="room_number">Room Number</string>
    <string name="subject">Subject</string>
    <string name="description_of_problem">Description of problem</string>
    <string name="reply">Reply</string>
    <string name="student_login">Student Login</string>
    <string name="student_register">Student Register</string>
    <string name="username">Username</string>
    <string name="hostel_name">Hostel Name</string>
    <string name="room_no">Room No.</string>
    <string name="been_here_before">Been here before?</string>
    <string name="pipe_symbol">|</string>
</resources>